--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/website
-jdbc.username = derwer
-jdbc.password = ukosVoyn*
+jdbc.username = usernaem 
+jdbc.password = password
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
